@@ -1,15 +1,12 @@
-import { Component, OnInit } from '@angular/core';
+import { Component } from '@angular/core';
 
 @Component({
   selector: 'gp-right-vertical-carousel',
   templateUrl: './right-vertical-carousel.component.html',
   styleUrls: ['./right-vertical-carousel.component.css']
 })
-export class RightVerticalCarouselComponent implements OnInit {
+export class RightVerticalCarouselComponent {
 
   constructor() { }
-
-  ngOnInit(): void {
-  }
 
 }
