@@ -1,6 +1,8 @@
 .gp__top-carousel {
   width: 50vw;
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .gp_carousel-hidden-button:hover {
