@@ -1,4 +1,5 @@
-<div id="topCarousel" class="carousel slide gp__top-carousel" data-bs-ride="carousel" data-bs-pause=false>
+<div id="topCarousel" class="carousel slide gp__top-carousel overflow-hidden" data-bs-ride="carousel"
+    data-bs-pause=false>
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
             <img src="../../assets/top-car-brush.jpg" class="d-block w-100" alt="...">
