@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-light bg-light px-5 sticky-top vw-100">
+<nav class="navbar navbar-expand navbar-light bg-light px-5 sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://gopuff.com" target="_blank">
             <!-- <img src="../../assets/gopufflogo.png" alt="" width="111.1761" height="41.4642"> -->
