@@ -11,6 +11,8 @@ import { AppRoutingModule } from './app-routing.module';
 import { HomeLayoutComponent } from './Layouts/home-layout.component';
 import { LeftVerticalCarouselComponent } from './Carousels/left-vertical-carousel/left-vertical-carousel.component';
 import { RightVerticalCarouselComponent } from './Carousels/right-vertical-carousel/right-vertical-carousel.component';
+import { SearchBarComponent } from './search-bar/search-bar.component';
+import { InfoCardComponent } from './info-card/info-card.component';
 
 
 @NgModule({
@@ -23,6 +25,8 @@ import { RightVerticalCarouselComponent } from './Carousels/right-vertical-carou
     HomeLayoutComponent,
     LeftVerticalCarouselComponent,
     RightVerticalCarouselComponent,
+    SearchBarComponent,
+    InfoCardComponent,
   ],
   imports: [
     BrowserModule,
