@@ -1,0 +1,8 @@
+.card-img-top {
+  width: 112px;
+  height: 112px;
+}
+
+.card {
+  border: none;
+}
