@@ -1,0 +1,8 @@
+<div class="card w-full align-items-center text-center h-100">
+    <img class="card-img-top" src={{img}} alt="Icon">
+    <div class="card-body">
+        <h5 class="card-title fs-1 fw-bolder m-0">{{title}}</h5>
+        <p class="card-text fs-5">{{description}}</p>
+
+    </div>
+</div>
