@@ -1,0 +1,19 @@
+
+
+export const mock_infoCard_list = [
+    {
+        img: '../../assets/InfoCardImgs/bag.svg',
+        title: "Thousands of Items",
+        description: "From cleaning supplies & over-the-counter medicine to food, drinks, electronics, baby essentials and more."
+    },
+    {
+        img: '../../assets/InfoCardImgs/clock.svg',
+        title: "Delivered Fast",
+        description: "From our micro-fulfillment center to your door means that you get your order in as little as 15-20 minutes. We're open late to bring you what you need."
+    },
+    {
+        img: '../../assets/InfoCardImgs/bill.svg',
+        title: "$1.95 Delivery Fee",
+        description: "Everything you need from weekday to weekend, delivered for only $1.95. Or join the Fam to get unlimited free delivery on eligible orders."
+    }
+];
